# simple_paint

./: COPYING  README.md  meson.build  org.gnome.Ff.json
data/: meson.build  org.gnome.Ff.appdata.xml.in  org.gnome.Ff.desktop.in  org.gnome.Ff.gschema.xml
po/: POTFILES  meson.build
src/: ff.gresource.xml  ff.in  main.py  meson.build  window.py  window.ui
